--- a/index.html
+++ b/index.html
@@ -5,15 +5,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/reset.css">
-    <!-- <link rel="stylesheet" href="./style/rwd.css"> -->
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="./style/rwd.css">
     <link rel="stylesheet" href="./style/style.css">
     <title>TodoList</title>
 </head>
 <body>
     <header class="main-header">
-        <div class="main-nav">
-
+        <div class="container">
+            <div class="col-12">
+                <input type="checkbox" name="" id="nav-switch">
+                <div class="header-group">
+                    <h1>
+                        <img src="./images/logo_sm.png" alt="online todolist logo">
+                    </h1>
+                    <!-- 漢堡樣式 -->
+                    <label for="nav-switch" class="hb">
+                        <span class="bar1"></span>
+                        <span class="bar2"></span>
+                        <span class="bar3"></span>
+                    </label>
+                    <!-- 選單 -->
+                    <nav class="main-nav">
+                        <a href="#">個人資料</a>
+                        <a href="#">登出</a>
+                    </nav>
+                </div>
+            </div>
         </div>
     </header>
+    <main class="main-content">
+        <div class="container">
+            <div class="col-12">
+                <div class="add-todo">
+                    <input type="text" name="" placeholder="新增待辦事項" id="addTodo">
+                    <i class="bx bx-plus add-icon"></i>
+                </div>
+
+                <i class="bx bx-x"></i>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
