--- a/login.html
+++ b/login.html
@@ -18,7 +18,7 @@
                 <h2>
                     <img src="./images/logo_lg.png" alt="">
                 </h2>
-                <form action="#">
+                <form>
                     <div class="input-field">
                         <!-- <label for="email">信箱</label> -->
                         <input type="email" placeholder="請輸入Email" class="input" id="email">
@@ -31,8 +31,8 @@
                     <div class="form-link">
                        <a href="#" class="forgot-pass">Forgot password ?</a>
                     </div>
-                    <div class="button-field">
-                        <button>登入</button>
+                    <div class="button-field ">
+                        <button  class="js-signin">登入</button>
                     </div>
                     <div class="form-link">
                         <span>Need an account ?<a href="#" class="link signup-link"> Signup </a></span>
@@ -52,7 +52,6 @@
                     </a>
                 </div>
             </div>
-
             <!-- Signup Form -->
             <div class="form signup">
                 <h2>
@@ -77,7 +76,7 @@
                         <i class="bx bx-hide hide-icon"></i>
                     </div>
                     <div class="button-field">
-                        <button>註冊</button>
+                        <button class="js-signup">註冊</button>
                     </div>
                     <div class="form-link">
                         <span>Already have an account ?<a href="#" class="link signin-link"> Signin </a></span>
@@ -99,6 +98,8 @@
             </div>
         </div>
     </section>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.2/axios.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="./js/script.js"></script>
 </body>
 </html>
