fix: todolist.js logic

--- a/todolist.html
+++ b/todolist.html
@@ -28,7 +28,7 @@
                     <!-- 選單 -->
                     <nav class="main-nav">
                         <!-- <a href="#">個人資料</a> -->
-                        <a href="./index.html" class="todoUser">OOO 的待辦</a>
+                        <a href="#" class="todoUser">OOO 的待辦</a>
                         <a href="#" class="logout">登出</a>
                     </nav>
                 </div>
@@ -53,7 +53,7 @@
                         <span data-tab="complete">已完成</span>
                     </div>
                     <div class="card-body">
-                        <ul class="todos-list todosList tabTodo">
+                        <ul class="todosList tabTodo">
                             
                         </ul>
                     </div>
